--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="container my-3 pb-3">
           <div class="back-button mb-4">
-            <button type="button" name="button">< Back</button>
+            <button type="button" onclick='location.reload();' name="button">< Back</button>
           </div>
           <span>Top </span> <span id='nval'></span> <span> Repositories of <a target="_blank" id='orgval' class='cool-link'></a> are:</span>
 
